# ChangeLog for sys-apps/busybox
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/busybox/ChangeLog,v 1.161 2007/10/15 14:50:40 corsair Exp $

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> busybox-1.6.1.ebuild:
  Stable on ppc64

  28 Sep 2007; Joshua Kinard <kumba@gentoo.org> busybox-1.6.1.ebuild:
  Stable on mips.

*busybox-1.7.1 (27 Sep 2007)

  27 Sep 2007; <solar@gentoo.org> +busybox-1.7.1.ebuild:
  - version bump

  20 Sep 2007; Mike Frysinger <vapier@gentoo.org> busybox-1.7.0.ebuild:
  Pull in pam when USE=pam #192895 by Marek Bartosiewicz.

  01 Sep 2007; Christoph Mende <angelos@gentoo.org> busybox-1.6.1.ebuild:
  Stable on amd64

*busybox-1.7.0 (25 Aug 2007)

  25 Aug 2007; Mike Frysinger <vapier@gentoo.org>
  +files/busybox-1.7.0-bb.patch, +busybox-1.7.0.ebuild:
  Version bump.

  13 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> busybox-1.6.1.ebuild:
  Stable on sparc

  10 Aug 2007; Raúl Porcel <armin76@gentoo.org> busybox-1.6.1.ebuild:
  alpha/ia64/x86 stable

  30 Jul 2007; Markus Rothe <corsair@gentoo.org> busybox-1.5.1.ebuild:
  Stable on ppc64; bug #186288

  28 Jul 2007; Steve Dibb <beandog@gentoo.org> busybox-1.5.1.ebuild:
  amd64 stable, bug 186288

  25 Jul 2007; Jeroen Roovers <jer@gentoo.org> busybox-1.5.1.ebuild:
  Stable for HPPA (bug #186288).

  23 Jul 2007; nixnut <nixnut@gentoo.org> busybox-1.5.1.ebuild:
  Stable on ppc wrt bug 186288

  23 Jul 2007; Joshua Kinard <kumba@gentoo.org> busybox-1.5.1.ebuild:
  Stable on mips, per #186288.

  23 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> busybox-1.5.1.ebuild:
  Stable on sparc wrt #186288

  10 Jul 2007; Raúl Porcel <armin76@gentoo.org> busybox-1.5.1.ebuild:
  alpha/ia64/x86 stable

*busybox-1.6.1 (09 Jul 2007)

  09 Jul 2007; Mike Frysinger <vapier@gentoo.org> +busybox-1.6.1.ebuild:
  Version bump #184759.
