@@ -46,6 +46,7 @@ DIST busybox-1.6.0.tar.bz2 1689981 RMD160 56ee3ebefa5f2c6bfad84375b3f7f0752d31fc
 DIST busybox-1.6.1.tar.bz2 1692099 RMD160 5fc8a3abeea8988777a9699bdffe025804ec1056 SHA1 ff79db26fa53c20808de4d6f3514f34044749a77 SHA256 d1c7ee084266a168372755929cc59cd27a5ddc136a97608b855f0dba5f7ba8c2
 DIST busybox-1.7.0.tar.bz2 1726650 RMD160 23691b0e908028d109138c1fdf719c35aada6bdc SHA1 84395ec037f23f08bdfc35e808622f344ab3c708 SHA256 b8b991dda8d386ef0210b421670efa6f72da2a5c382c544e6791efa0cbaeac76
 DIST busybox-1.7.1.tar.bz2 1728262 RMD160 42ba3ef6033b8d74c31251810f73c48ddb3820e1 SHA1 439ebcbe2b48e19e1c9acc5aa886b24795d523b1 SHA256 8b6a5fe183cbc19c73db475aaba73af0ba2cba386f3b206fb7720dcf94da549c
+DIST busybox-1.7.2.tar.bz2 1729040 RMD160 f9850b3949ad61dfae37c7ab48eac6c9507eb537 SHA1 d9c618a7b104af4e70d623b1b6f3bc454405e12b SHA256 83c4cc813124a43f13e2ebb83cea9da9909d63891b824bf4bc7006f0567db7cf
 EBUILD busybox-1.4.1-r2.ebuild 7981 RMD160 83426ba5b68db54a6201fcbe9f7213908b8b8457 SHA1 6394e28e73cdea532532afbb674076d029a029b7 SHA256 bf7a7ee065cefa47aa00eb06714cf6225b664968a95f826d8ada3f8489cb79a3
 MD5 7221bd06e12defbe8b271d914f0e1b95 busybox-1.4.1-r2.ebuild 7981
 RMD160 83426ba5b68db54a6201fcbe9f7213908b8b8457 busybox-1.4.1-r2.ebuild 7981
@@ -78,10 +79,14 @@ EBUILD busybox-1.7.1.ebuild 7015 RMD160 895fb24957205cae59cf631642934418773066d4
 MD5 74247c508dd7103a9e4d580741f7ae92 busybox-1.7.1.ebuild 7015
 RMD160 895fb24957205cae59cf631642934418773066d4 busybox-1.7.1.ebuild 7015
 SHA256 6e4bde9de725a4ac3d02f44daac357824831050b594fe082a58af2da687758a3 busybox-1.7.1.ebuild 7015
-MISC ChangeLog 24390 RMD160 991681d12e1ae947ba6d6838ee39c9c67918371d SHA1 998210c4f600dc54187fed672837d41494f14b18 SHA256 490f4b82507fba6749ad48a75f15e17fd7a901b3e20eba9bd343fcdd05cb2114
-MD5 500b37443e15d4d6627a9c8a5715684a ChangeLog 24390
-RMD160 991681d12e1ae947ba6d6838ee39c9c67918371d ChangeLog 24390
-SHA256 490f4b82507fba6749ad48a75f15e17fd7a901b3e20eba9bd343fcdd05cb2114 ChangeLog 24390
+EBUILD busybox-1.7.2.ebuild 7017 RMD160 f9385d31753be5c1d38713f40c32c4425956feaa SHA1 fefd0c431e5e759fe385f5991586196586745ff5 SHA256 b12b6a6df4da7a6d888091b8e4e3bc350dd51aeb2896906c0028ecaabdfed15f
+MD5 dc8fd178fcf88e873e82a552b5a62462 busybox-1.7.2.ebuild 7017
+RMD160 f9385d31753be5c1d38713f40c32c4425956feaa busybox-1.7.2.ebuild 7017
+SHA256 b12b6a6df4da7a6d888091b8e4e3bc350dd51aeb2896906c0028ecaabdfed15f busybox-1.7.2.ebuild 7017
+MISC ChangeLog 24506 RMD160 83adb61e1b1ff9538c2a938456c68955561ec25f SHA1 71fb8fc4c0fa8f4acd5b65f9e7bfbfb851318d2b SHA256 ac156e55e23e2bb2f1224daa01b0cb939320985ca0d17f2ae12a59fc1b07e30b
+MD5 e5314e84b8fa1b826f023e5fb83895da ChangeLog 24506
+RMD160 83adb61e1b1ff9538c2a938456c68955561ec25f ChangeLog 24506
+SHA256 ac156e55e23e2bb2f1224daa01b0cb939320985ca0d17f2ae12a59fc1b07e30b ChangeLog 24506
 MISC metadata.xml 161 RMD160 77385273ea1d12ed4093a4167307486b74d1cf82 SHA1 aa4b2873e32de89c0b0aeb26b5782f77cb00948e SHA256 a11fdd02015a232398fdf22a20d26a95fc34d44c54513e6b26b6128d0b76122e
 MD5 8ef75eba39772bdd1a8facc7815dbebb metadata.xml 161
 RMD160 77385273ea1d12ed4093a4167307486b74d1cf82 metadata.xml 161
@@ -110,3 +115,6 @@ SHA256 f879f15c80c48716cdd3d0b2daf84dca99b91b9149d371a55793b4eb6d16fdcb files/di
 MD5 b845a7940bb1d8df2d9dc58815e5e000 files/digest-busybox-1.7.1 247
 RMD160 fcc24a9c07f874b544eaec3d3635f2a73d192108 files/digest-busybox-1.7.1 247
 SHA256 759e7a72ce1d693dce080e707a86f6e97f4cac8e441815525e98f113ca977892 files/digest-busybox-1.7.1 247
+MD5 d378f96c7e0917c8a112ee59cb5e12b5 files/digest-busybox-1.7.2 247
+RMD160 b454bfb2035301ed7a71e78735761d4479dd684d files/digest-busybox-1.7.2 247
+SHA256 45828cbb8ff1bf28b44e3b750812585eff99c87a99d87d2a9694a360285d68b1 files/digest-busybox-1.7.2 247
