@@ -1,0 +1,3 @@
+MD5 c91ec9756e2000073a9dd8fa9fc3f89e busybox-1.7.2.tar.bz2 1729040
+RMD160 f9850b3949ad61dfae37c7ab48eac6c9507eb537 busybox-1.7.2.tar.bz2 1729040
+SHA256 83c4cc813124a43f13e2ebb83cea9da9909d63891b824bf4bc7006f0567db7cf busybox-1.7.2.tar.bz2 1729040
